style: fix sidebar collapse

--- a/crm-monitoring/src/style/Dashboard.css
+++ b/crm-monitoring/src/style/Dashboard.css
@@ -1,19 +1,15 @@
-.custom-table .ant-table-thead > tr > th {
-  background-color: #f0f5ff; /* Warna biru */
-  color: #0549cf; /* Warna teks putih */
-}
 /* Atur margin content saat sidebar collapsed */
 .site-layout-background {
-  margin-top: 24px;
+  margin-top: 0px !important;
 }
 .content-collapsed {
-  margin-left: 0px; /* Sesuaikan sesuai ukuran sidebar collapsed */
+  margin-left: 4px; /* Sesuaikan sesuai ukuran sidebar collapsed */
   transition: margin-left 0.2s ease-in-out;
 }
 
 /* Atur margin content saat sidebar tidak collapsed */
 .content-expanded {
-  margin-left: 0px; /* Sesuaikan sesuai ukuran sidebar normal */
+  margin-left: 4px; /* Sesuaikan sesuai ukuran sidebar normal */
   transition: margin-left 0.2s ease-in-out;
 }
 
